# DataLab_test

./: 3d_processing.md  README.md  main.py  pyproject.toml
examples/: proc_3d_var_ex.txt  regi_var_ex.txt
output/: EaglePointCloud_proc_3d_idx0_rad0.1.h5  icp_proc_3d_idx0_rad0.1.h5
outputs/: icp_proc_3d_idx0_rad0.1.h5  icp_regi.h5  icp_regi_tar.pcd  preprocess_regi_src.pcd  ransac_regi_src.pcd  ransac_regi_tar.pcd
pcd_register/: __init__.py
pcd_register/tools/: pcd_loader.py  proc_3d_loader.py  regi_loader.py  utility.py
pcd_register/tools/archives/: README.md  regi_loader_v1.py
pcd_register/wrappers/: proc_3d_wrappers.py  regi_wrappers.py
pcd_register/wrappers/archives/: regi_wrappers_v1.py
tests/: test_proc_3d.py  test_regi.py
